[package]
name        = "aozora-flavored-markdown-wasm"
description = "WebAssembly bindings for aozora-flavored-markdown — used by aozora-flavored-markdown-obsidian / aozora-flavored-markdown-logseq / browser hosts"
# Not a crates.io library: ships as a wasm-pack/npm artefact to the editor
# hosts, so it stays out of the `publish-crates.yml` ladder (ADR-0015).
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `tsify` makes the lib's IR + diagnostic types derive `Tsify`, so wasm-pack
# emits their `.d.ts` alongside this crate's envelope types (ADR-0017).
aozora-flavored-markdown   = { workspace = true, features = ["tsify"] }
# Editor-assist surface (completion catalogue + the source-coordinate
# Document API used by the playground's hover / inlay / outline / fold
# features). aozora-flavored-markdown composes aozora; here it also re-exposes aozora's own
# Document/wire so the editor can query 青空文庫 spans in source
# coordinates — a separate path from `renderAfm` (which goes through
# comrak and loses source offsets). The `wire` feature pulls in the
# `aozora::wire::serialize_*` JSON projection (and serde/serde_json).
aozora         = { workspace = true, features = ["wire"] }
wasm-bindgen   = { workspace = true }
# Derives `Tsify` on this crate's wire-envelope structs so wasm-pack emits
# their `.d.ts` directly (ADR-0017). The lib's IR/diagnostic types derive it
# behind the `tsify` feature enabled above.
tsify     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
twox-hash      = { version = "2", default-features = false, features = ["xxhash3_64"] }

# `web-sys` powers the `profileJson` per-method timing via
# `performance.now()` — `std::time::Instant` panics on
# wasm32-unknown-unknown. Only linked for the wasm target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys        = { version = "0.3", features = ["Performance", "Window"] }

[features]
default = ["panic-hook"]
panic-hook = ["dep:console_error_panic_hook"]

# wasm-pack consumers should NOT enable wasm-opt here; the docker
# `wasm` service runs a fresh binaryen wasm-opt over the produced
# .wasm via a dedicated stage (see aozora-flavored-markdown-obsidian/Dockerfile).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
