[package]
name        = "aozora-flavored-markdown"
description = "Aozora Flavored Markdown: CommonMark + GFM + Aozora Bunko notation integration over a vendored comrak fork"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
# The single umbrella front door for the aozora parser (its designated
# public surface). Reached via `aozora::{pipeline, syntax, render,
# encoding}` + the top-level re-exports — never the internal
# `publish = false` build-block crates. See the workspace manifest.
aozora    = { workspace = true }
comrak    = { workspace = true }
miette    = { workspace = true }
thiserror = { workspace = true }
# Used by the IR module to derive Serialize on `IrDocument`. Pulled
# in as a regular dep so downstream consumers (aozora-flavored-markdown-wasm, aozora-flavored-markdown-epub)
# can round-trip the IR via serde-wasm-bindgen / serde_json without
# extra adapters.
serde     = { workspace = true }

[dev-dependencies]
aozora-flavored-markdown-test-support = { workspace = true }
# Aozora-shaped proptest generators come through the umbrella's
# `proptest` feature (a dev-only feature so the normal build graph stays
# free of proptest). Used as `aozora::proptest::{config, generators}`.
aozora            = { workspace = true, features = ["proptest"] }
proptest          = { workspace = true }
pretty_assertions = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
criterion         = { workspace = true }
dhat              = { workspace = true }
# Snapshot assertions for the post-splice HTML golden tests
# (`tests/snapshot_splice.rs`).
insta             = { workspace = true }

[features]
default = ["html"]
# HTML renderer. Enabled by default but kept behind a feature so
# downstream tools can parse without pulling in the renderer.
html = []

[[bench]]
name    = "render_to_string"
harness = false

[[bench]]
name    = "splice"
harness = false
