[package]
name        = "aozora-flavored-markdown"
description = "Aozora Flavored Markdown: CommonMark + GFM + Aozora Bunko notation integration over a vendored comrak fork"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
# The single umbrella front door for the aozora parser (its designated
# public surface). Reached via `aozora::{pipeline, syntax, render,
# encoding}` + the top-level re-exports — never the internal
# `publish = false` build-block crates. See the workspace manifest.
aozora    = { workspace = true }
comrak    = { workspace = true }
# Used by the IR module to derive Serialize on `IrDocument`. Pulled
# in as a regular dep so downstream consumers (aozora-flavored-markdown-wasm, aozora-flavored-markdown-epub)
# can round-trip the IR via serde-wasm-bindgen / serde_json without
# extra adapters.
serde     = { workspace = true }
# Feature-gated TypeScript-binding derives. The `tsify` feature (enabled only
# by aozora-flavored-markdown-wasm) makes the IR + diagnostic types derive
# `tsify::Tsify`, so wasm-pack emits their `.d.ts` directly — no separate
# codegen step (ADR-0017). Off by default, so host builds (CLI / epub / tests)
# never pull wasm-bindgen.
tsify   = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
aozora-flavored-markdown-test-support = { workspace = true }
# Aozora-shaped proptest generators come through the umbrella's
# `proptest` feature (a dev-only feature so the normal build graph stays
# free of proptest). Used as `aozora::proptest::{config, generators}`.
aozora            = { workspace = true, features = ["proptest"] }
proptest          = { workspace = true }
pretty_assertions = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
criterion         = { workspace = true }
dhat              = { workspace = true }
# Snapshot assertions for the post-splice HTML golden tests
# (`tests/snapshot_splice.rs`).
insta             = { workspace = true }

[features]
default = ["html"]
# HTML renderer. Enabled by default but kept behind a feature so
# downstream tools can parse without pulling in the renderer.
html = []
# TypeScript-binding derives (see `tsify` / `wasm-bindgen` above).
# Enabled by aozora-flavored-markdown-wasm so wasm-pack emits the IR +
# diagnostic `.d.ts` directly (ADR-0017). Off by default — host builds
# never pull wasm-bindgen.
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[package.metadata.cargo-shear]
# `wasm-bindgen` is pulled by the `tsify` feature and used only by the code
# `tsify::Tsify` expands into (no source-level `use`), so cargo-shear's
# `syn` pass can't see it. It is genuinely required whenever `tsify` is on.
ignored = ["wasm-bindgen"]

[[bench]]
name    = "render_to_string"
harness = false

[[bench]]
name    = "splice"
harness = false
