[package]
name        = "xtask"
description = "Development automation for the afm workspace"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
publish     = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
