[package]
name        = "xtask"
description = "Development automation for the afm workspace"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
publish     = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
# The IR type tree (`afm_markdown::ir::{IrDocument, IrBlock, IrInline, …}`)
# is the single source of truth for the generated TypeScript artefact and
# the compile-time variant-completeness pins in `types.rs`.
afm-markdown = { workspace = true }
