[package]
name        = "xtask"
description = "Development automation for the aozora-flavored-markdown workspace"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
publish     = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
# The IR type tree (`aozora_flavored_markdown::ir::{IrDocument, IrBlock, IrInline, …}`)
# is the single source of truth for the generated TypeScript artefact and
# the compile-time variant-completeness pins in `types.rs`.
aozora-flavored-markdown = { workspace = true }
