[package]
name = "aozora-md-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aozora-flavored-markdown              = { path = ".." }
aozora-flavored-markdown-test-support = { path = "../../aozora-flavored-markdown-test-support" }
# Depend on the umbrella `aozora` crate (not the internal aozora-encoding),
# matching the workspace's B1 migration, and pin the same rev as the
# parent workspace's `aozora` (a loose `branch = "main"` could drift from
# the rev aozora-flavored-markdown builds against). `aozora::encoding::decode_sjis` is the
# umbrella path for the SJIS decoder the sjis_decode target fuzzes.
aozora                    = { version = "0.4.0", git = "https://github.com/P4suta/aozora.git", rev = "a53c632b1d1be4bfcbce7de010ab5b0843e98cc0", default-features = false }

# Prevent this crate from joining the aozora-flavored-markdown workspace.
# Each fuzz target needs libfuzzer-sys (nightly-gated), which the
# workspace-wide `cargo build --workspace` should not pick up.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_render"
path = "fuzz_targets/parse_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serialize_round_trip"
path = "fuzz_targets/serialize_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sjis_decode"
path = "fuzz_targets/sjis_decode.rs"
test = false
doc = false
bench = false
